Pushing Layouts code

--- a/panel.html
+++ b/panel.html
@@ -17,9 +17,16 @@
     <input type="text" placeholder="contentId" id="contentId" >
     <button id="load">Load streams</button>
 
+    <br>
+
     <!-- <input type="text" placeholder="channelId" id="channelId"> -->
     <select name="Channels" id="channels"></select>
     <button id="open">Open Player</button>
+
+    <br>
+
+    <select name="Layouts" id="layouts"></select>
+    <button id="open_layout">Open this layout</button>
 </body>
 
 </html>
