--- a/index.html
+++ b/index.html
@@ -17,22 +17,16 @@
             pointer-events: none;
         }
     </style>
-    <!-- Step 1) Load the stylesheet of the player UI-->
-    <link rel="stylesheet" href="/ui/bitmovinplayer-ui.css">
-    <script src="//bitmovin-a.akamaihd.net/bitmovin-player/stable/8/bitmovinplayer.js"></script>
-    <!-- Step 2) Load the bitmovinplayer-ui.js-->
-    <script src="/ui/bitmovinplayer-ui.js"></script>
+    <script src="/dist/shaka-player.compiled.debug.js"></script>
 </head>
 
 <body>
-    <div class="player-wrapper">
-        <div id="player"></div>
-    </div>
+    <video id="video" width="100%" poster="/assets/poster.png" controls autoplay></video>
 
     <script>
         require('dotenv').config()
 
-        if(process.env.PATH_STATIC === "PROD") {
+        if (process.env.PATH_STATIC === "PROD") {
             __dirname = `${__dirname}/../../../`
         }
 
