Pushing yesterday code

--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
             pointer-events: none;
         }
     </style>
-    <script src="/dist/shaka-player.compiled.debug.js"></script>
 </head>
 
 <body>
-    <video id="video" width="100%" poster="/assets/poster.png" controls autoplay></video>
+    <!-- <video id="video" width="100%" poster="/assets/poster.png" controls autoplay></video> -->
 
     <script>
         require('dotenv').config()
