Adding something so it's working

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <!-- <video id="video" width="100%" poster="/assets/poster.png" controls autoplay></video> -->
+    <video id="video" width="100%" poster="/assets/poster.png"  controls autoplay></video>
 
     <script>
         require('dotenv').config()
