Adding base of Live Timing

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <title>Homemade_F1MV</title>
   <style>
     * {
-      overflow: hidden;
-      margin: 0;
+      /* overflow: hidden; */
+      /* margin: 0; */
       -webkit-app-region: drag;
     }
   </style>
